// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check with 0 expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`check with 1 expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.23
  </h1>
</div>
`;

exports[`check with 1 expenses 2`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $234.00
  </h1>
</div>
`;
